fixed layout shifts

--- a/src/pages/Newtab/AudioPlayer.css
+++ b/src/pages/Newtab/AudioPlayer.css
@@ -49,8 +49,9 @@ body {
   color: var(--primary-text-color);
   font-size: var(--font-size-small);
   font-family: var(--font-family-mono);
-  width: 40px;
+  min-width: 55px;
   text-align: center;
+  margin-bottom: 0.0001rem;
 }
 
 .current-time {
